# cinextract

./: .gitignore  README.md  aesthetic_rank.py  cluster_scenes.py  encode_stills.py  extract_stills.py  pyproject.toml  pyrightconfig.json  reduce_stills_encodings.py  requirements.txt  stills.py
cinematic_stills_extractor/: __main__.py  aesthetic_predictor.py  embedding.py  scene.py  still_frames.py
cinextract/: __init__.py  __main__.py  aesthetic_predictor.py  cache.py  embedding.py  scene.py  still_frames.py
