[project]
name = "cinematic-frame-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hdbscan>=0.8.40",
    "numba>=0.57.1",
    "numpy>=1.24.4",
    "open-clip-torch>=2.30.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "polars>=1.22.0",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "typer>=0.15.1",
    "umap-learn>=0.5.7",
]
